--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,6 +29,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
+       # 🔐 Login to Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # 🐳 Build & Push Image
+      - name: Build and Push Docker image
         working-directory: ./CalculatorApp
-        run: docker build -t my-react-app .
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/calculator-app:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/calculator-app:latest
